--- a/feature_selection_analysis/MI_reg.ipynb
+++ b/feature_selection_analysis/MI_reg.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.feature_selection import mutual_info_regression, mutual_info_classif\n",
+    "from sklearn.feature_selection import mutual_info_regression\n",
     "from dask import compute, delayed\n",
     "from time import perf_counter\n",
     "\n",
@@ -42,20 +42,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matrisome_df = prep.load_matrisome_df(matrisome_list)\n",
-    "sig_deg_df = pd.read_csv(f\"{dirs.analysis_dir}/{unified_dsets[dset_idx]}_sig_DESeq_results_xref_matrisome.tsv\", sep = '\\t')\n",
-    "matrisome_sig_deg_df = (\n",
-    "    sig_deg_df.query(\"in_matrisome == True\")\n",
-    "        .reset_index(drop=True)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "seed = 123\n",
     "rand = np.random.RandomState()"
    ]
@@ -69,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +229,7 @@
        "4  not hispanic or latino  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +322,7 @@
        "4  TCGA-EY-A2ON-01A-21R-A18M-07             1          610.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,24 +348,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "norm_matrisome_counts_df = pd.read_csv(f\"{dirs.data_dir}/{unified_dsets[dset_idx]}/norm_matrisome_counts.tsv\", sep='\\t')\n",
-    "norm_matrisome_survival_counts_t_df = (\n",
-    "    norm_matrisome_counts_df[[\"geneID\"] + list(filtered_survival_df.sample_name)]\n",
-    "        .set_index(\"geneID\")                        # set as index so will be column names\n",
-    "        .transpose()\n",
-    "        .rename_axis(None, axis=1)                  # column.name will be set to \"geneID\", we don't want this\n",
-    "        .reset_index()                              # \"sample_name\" should now be its own column\n",
-    "        .rename({\"index\": \"sample_name\"}, axis=1)\n",
+    "norm_filtered_matrisome_counts_t_df = prep.transpose_df(\n",
+    "    norm_matrisome_counts_df[[\"geneID\"] + list(filtered_survival_df.sample_name)], \"geneID\", \"sample_name\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -627,14 +608,14 @@
        "[5 rows x 1009 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "joined_df = (\n",
-    "    pd.merge(filtered_survival_df, norm_matrisome_survival_counts_t_df, on=\"sample_name\")\n",
+    "    pd.merge(filtered_survival_df, norm_filtered_matrisome_counts_t_df, on=\"sample_name\")\n",
     "        .drop(\"vital_status\", axis=1)\n",
     "        .set_index(\"sample_name\")\n",
     ")\n",
@@ -652,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,14 +643,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21.577448200026993\n"
+      "40.23346959997434\n"
      ]
     }
    ],
@@ -685,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +871,7 @@
        "[5 rows x 103 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +896,7 @@
        "458"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,19 +907,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "mi_df[[\"geneID\", \"MI_est_median\"]].to_csv(f\"{dirs.analysis_dir}/{unified_dsets[dset_idx]}_MI_survival_results.tsv\", sep=\"\\t\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
