Ran optimization of each model - except logistic regression & maybe naive bayes

--- a/feature_selection_analysis/gbc_opt.ipynb
+++ b/feature_selection_analysis/gbc_opt.ipynb
@@ -10,10 +10,7 @@
     "import numpy as np\n",
     "import os\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn.pipeline import make_pipeline, Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import cross_val_score, KFold\n",
-    "from sklearn.compose import ColumnTransformer, TransformedTargetRegressor\n",
     "from sklearn.metrics import f1_score\n",
     "from skopt.space import Real, Integer, Categorical\n",
     "from skopt import gp_minimize\n",
@@ -30,8 +27,7 @@
    "outputs": [],
    "source": [
     "dirs = dev_conf.get_dev_directories(\"../dev_paths.txt\")\n",
-    "unified_dsets = [\"unified_cervical_data\", \"unified_uterine_data\", \"unified_uterine_endometrial_data\"]\n",
-    "matrisome_list = f\"{dirs.data_dir}/matrisome/matrisome_hs_masterlist.tsv\""
+    "unified_dsets = [\"unified_cervical_data\", \"unified_uterine_data\", \"unified_uterine_endometrial_data\"]"
    ]
   },
   {
@@ -41,15 +37,6 @@
    "outputs": [],
    "source": [
     "dset_idx = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrisome_df = prep.load_matrisome_df(matrisome_list)"
    ]
   },
   {
@@ -306,26 +293,6 @@
     "    n_jobs=-1,\n",
     "    callback=lambda x: opt.save_callback(x, callback_file, n = 5, sep=\"\\t\")\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'a'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(\"a\")"
    ]
   }
  ],
