Finished scripts and running all optimizations/feature permutations

--- a/feature_selection_analysis/feature_perm_cls.ipynb
+++ b/feature_selection_analysis/feature_perm_cls.ipynb
@@ -46,15 +46,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrisome_df = prep.load_matrisome_df(matrisome_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -79,8 +70,7 @@
     "event_code = {\"Alive\": 0, \"Dead\": 1}\n",
     "covariate_cols = [\"age_at_diagnosis\", \"race\", \"ethnicity\"]\n",
     "dep_cols = [\"figo_stage\"]\n",
-    "cat_cols = [\"race\", \"ethnicity\"]\n",
-    "survival_df = prep.load_survival_df(f\"{dirs.data_dir}/{unified_dsets[dset_idx]}/survival_data.tsv\", event_code)"
+    "cat_cols = [\"race\", \"ethnicity\"]"
    ]
   },
   {
@@ -97,6 +87,7 @@
     }
    ],
    "source": [
+    "survival_df = prep.load_survival_df(f\"{dirs.data_dir}/{unified_dsets[dset_idx]}/survival_data.tsv\", event_code)\n",
     "filtered_survival_df = (\n",
     "    prep.decode_figo_stage(survival_df[[\"sample_name\"] + dep_cols + covariate_cols].dropna(), to=\"n\")\n",
     "        .pipe(pd.get_dummies, columns=cat_cols)\n",
@@ -519,27 +510,9 @@
    ],
    "source": [
     "l1_lr_merge_df = merge_perm_results(l1_lr_perm_res_dfs)\n",
-    "l1_lr_merge_df.query(\"consensus_vote == True\").sort_values(\"consensus_imp_mean\", ascending=False).shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.50164974, 0.50897904, 0.49894685, 0.4960666 , 0.49307874])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array(l1_lr_ref_scores).mean(axis=1)"
+    "# l1_lr_merge_df.query(\"consensus_vote == True\").sort_values(\"consensus_imp_mean\", ascending=False).shape[0]\n",
+    "np.array(l1_lr_ref_scores).mean(axis=1)\n",
+    "l1_lr_merge_df.to_csv(f\"{dirs.analysis_dir}/{unified_dsets[dset_idx]}_l1_lr_results.tsv\", sep=\"\\t\", index=False)"
    ]
   },
   {
@@ -590,27 +563,9 @@
    ],
    "source": [
     "l2_lr_merge_df = merge_perm_results(l2_lr_perm_res_dfs)\n",
-    "l2_lr_merge_df.query(\"consensus_vote == True\").sort_values(\"consensus_imp_mean\", ascending=False).shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.50974458, 0.50974458, 0.50974458, 0.50974458, 0.50778366])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array(l2_lr_ref_scores).mean(axis=1)"
+    "# l2_lr_merge_df.query(\"consensus_vote == True\").sort_values(\"consensus_imp_mean\", ascending=False).shape[0]\n",
+    "np.array(l2_lr_ref_scores).mean(axis=1)\n",
+    "l2_lr_merge_df.to_csv(f\"{dirs.analysis_dir}/{unified_dsets[dset_idx]}_l2_lr_results.tsv\", sep=\"\\t\", index=False)"
    ]
   },
   {
@@ -661,27 +616,9 @@
    ],
    "source": [
     "gbc_merge_df = merge_perm_results(gbc_perm_res_dfs)\n",
-    "gbc_merge_df.query(\"consensus_vote == True\").sort_values(\"consensus_imp_mean\", ascending=False).shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.48539758, 0.47589069, 0.47466133, 0.48404418, 0.4743963 ])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array(gbc_ref_scores).mean(axis=1)"
+    "# gbc_merge_df.query(\"consensus_vote == True\").sort_values(\"consensus_imp_mean\", ascending=False).shape[0]\n",
+    "np.array(gbc_ref_scores).mean(axis=1)\n",
+    "gbc_merge_df.to_csv(f\"{dirs.analysis_dir}/{unified_dsets[dset_idx]}_gbc_results.tsv\", sep=\"\\t\", index=False)"
    ]
   },
   {
@@ -732,45 +669,8 @@
    ],
    "source": [
     "rfc_merge_df = merge_perm_results(rfc_perm_res_dfs)\n",
-    "rfc_merge_df.query(\"consensus_vote == True\").sort_values(\"consensus_imp_mean\", ascending=False).shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.40481892, 0.40483626, 0.39257452, 0.40856094, 0.41197281])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array(rfc_ref_scores).mean(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Save findings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l1_lr_merge_df.to_csv(f\"{dirs.analysis_dir}/{unified_dsets[dset_idx]}_l1_lr_results.tsv\", sep=\"\\t\", index=False)\n",
-    "l2_lr_merge_df.to_csv(f\"{dirs.analysis_dir}/{unified_dsets[dset_idx]}_l2_lr_results.tsv\", sep=\"\\t\", index=False)\n",
-    "gbc_merge_df.to_csv(f\"{dirs.analysis_dir}/{unified_dsets[dset_idx]}_gbc_results.tsv\", sep=\"\\t\", index=False)\n",
+    "# rfc_merge_df.query(\"consensus_vote == True\").sort_values(\"consensus_imp_mean\", ascending=False).shape[0]\n",
+    "np.array(rfc_ref_scores).mean(axis=1)\n",
     "rfc_merge_df.to_csv(f\"{dirs.analysis_dir}/{unified_dsets[dset_idx]}_rfc_results.tsv\", sep=\"\\t\", index=False)"
    ]
   }
