--- a/feature_selection_analysis/feature_selection_meta.ipynb
+++ b/feature_selection_analysis/feature_selection_meta.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,15 @@
    ],
    "source": [
     "matrisome_df <- rutils::load_matrisome_df(matrisome_list) %>%\n",
-    "    dplyr::select(gene_symbol, division, category)"
+    "    dplyr::select(gene_symbol, division, category)\n",
+    "\n",
+    "\n",
+    "get_consensus_col <- function(df, n, thresh = 0) {\n",
+    "    consensus_df <- df %>%\n",
+    "        dplyr::select(geneID, contains(\"mean\")) %>%\n",
+    "        dplyr::mutate(consensus = rowSums(.[-1] > thresh) == n)\n",
+    "    return(df %>% dplyr::mutate(consensus = consensus_df$consensus))\n",
+    "}"
    ]
   },
   {
@@ -996,13 +1004,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 55,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1138,30 +1141,42 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'GBC F1 consensus genes: 43'"
+      ],
+      "text/latex": [
+       "'GBC F1 consensus genes: 43'"
+      ],
+      "text/markdown": [
+       "'GBC F1 consensus genes: 43'"
+      ],
+      "text/plain": [
+       "[1] \"GBC F1 consensus genes: 43\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "f1_gbc_scores_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_gbc_ref_scores.tsv\"))\n",
     "f1_gbc_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_gbc_results.tsv\"))\n",
+    "f1_gbc_results_df <- get_consensus_col(f1_gbc_results_df, n = 5, thresh = 0)\n",
     "f1_gbc_scores_df\n",
     "\n",
     "f1_gbc_avg <- mean(f1_gbc_scores_df$ref_score)\n",
     "f1_gbc_imp <- f1_gbc_avg > f1_macro_MC_baseline\n",
     "f1_gbc_baseline_pct_imp <- (f1_gbc_avg - f1_macro_MC_baseline) / f1_macro_MC_baseline\n",
-    "# n_f1_gbc_consensus_genes <- nrow(f1_gbc_results_df %>% dplyr::filter(consensus_vote == TRUE))\n",
+    "n_f1_gbc_consensus_genes <- nrow(f1_gbc_results_df %>% dplyr::filter(consensus == TRUE))\n",
     "\n",
     "paste0(\"GBC F1 avg.: \", f1_gbc_avg)\n",
     "paste0(\"GBC F1 impr. over baseline: \", f1_gbc_imp)\n",
     "paste0(\"GBC F1 pct. impr. baseline: \", f1_gbc_baseline_pct_imp)\n",
-    "# paste0(\"GBC F1 consensus genes: \", n_f1_gbc_consensus_genes)"
+    "paste0(\"GBC F1 consensus genes: \", n_f1_gbc_consensus_genes)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1178,12 +1193,13 @@
    "source": [
     "f1_l1_lr_scores_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_l1_lr_ref_scores.tsv\"))\n",
     "f1_l1_lr_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_l1_lr_results.tsv\"))\n",
+    "f1_gbc_results_df <- get_consensus_col(f1_gbc_results_df, n = 5, thresh = 0)\n",
     "f1_l1_lr_scores_df\n",
     "\n",
     "f1_l1_lr_avg <- mean(f1_l1_lr_scores_df$ref_score)\n",
     "f1_l1_lr_imp <- f1_l1_lr_avg > f1_weighted_majority_baseline\n",
     "f1_l1_lr_baseline_diff <- f1_l1_lr_avg - f1_weighted_majority_baseline\n",
-    "n_f1_l1_lr_consensus_genes <- nrow(f1_l1_lr_results_df %>% dplyr::filter(consensus_vote == TRUE))\n",
+    "n_f1_l1_lr_consensus_genes <- nrow(f1_l1_lr_results_df %>% dplyr::filter(consensus == TRUE))\n",
     "\n",
     "paste0(\"LR L1 F1 avg.: \", f1_l1_lr_avg)\n",
     "paste0(\"LR L1 F1 impr. over baseline: \", f1_l1_lr_imp)\n",
