Redid summary document so needed to update meta notebook

--- a/feature_selection_analysis/feature_selection_meta.ipynb
+++ b/feature_selection_analysis/feature_selection_meta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -556,6 +556,7 @@
       "  geneID = col_character(),\n",
       "  cor = col_double(),\n",
       "  pval = col_double(),\n",
+      "  padj = col_double(),\n",
       "  n = col_double()\n",
       ")\n"
      ]
@@ -563,16 +564,16 @@
     {
      "data": {
       "text/html": [
-       "'Cor. genes: 40'"
+       "'Cor. genes: 3'"
       ],
       "text/latex": [
-       "'Cor. genes: 40'"
+       "'Cor. genes: 3'"
       ],
       "text/markdown": [
-       "'Cor. genes: 40'"
+       "'Cor. genes: 3'"
       ],
       "text/plain": [
-       "[1] \"Cor. genes: 40\""
+       "[1] \"Cor. genes: 3\""
       ]
      },
      "metadata": {},
@@ -581,16 +582,16 @@
     {
      "data": {
       "text/html": [
-       "'Neg. cor. genes: 8'"
+       "'Neg. cor. genes: 0'"
       ],
       "text/latex": [
-       "'Neg. cor. genes: 8'"
+       "'Neg. cor. genes: 0'"
       ],
       "text/markdown": [
-       "'Neg. cor. genes: 8'"
+       "'Neg. cor. genes: 0'"
       ],
       "text/plain": [
-       "[1] \"Neg. cor. genes: 8\""
+       "[1] \"Neg. cor. genes: 0\""
       ]
      },
      "metadata": {},
@@ -599,16 +600,16 @@
     {
      "data": {
       "text/html": [
-       "'Pos. cor. genes: 32'"
+       "'Pos. cor. genes: 3'"
       ],
       "text/latex": [
-       "'Pos. cor. genes: 32'"
+       "'Pos. cor. genes: 3'"
       ],
       "text/markdown": [
-       "'Pos. cor. genes: 32'"
+       "'Pos. cor. genes: 3'"
       ],
       "text/plain": [
-       "[1] \"Pos. cor. genes: 32\""
+       "[1] \"Pos. cor. genes: 3\""
       ]
      },
      "metadata": {},
@@ -618,7 +619,8 @@
    "source": [
     "cor_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_cor_results.tsv\"))\n",
     "\n",
-    "filtered_cor_results_df <- cor_results_df %>% dplyr::filter(pval < p_thresh)\n",
+    "# filtered_cor_results_df <- cor_results_df %>% dplyr::filter(pval < p_thresh)\n",
+    "filtered_cor_results_df <- cor_results_df %>% dplyr::filter(padj < p_thresh)\n",
     "\n",
     "n_cor <- nrow(filtered_cor_results_df)\n",
     "n_cor_down <- nrow(filtered_cor_results_df %>% dplyr::filter(cor < 0))\n",
@@ -638,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
