Updated anova experiments and tried anova by vital status

--- a/feature_selection_analysis/anova.ipynb
+++ b/feature_selection_analysis/anova.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
+      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
+      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
+      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
+      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "✖ dplyr::filter() masks stats::filter()\n",
+      "✖ dplyr::lag()    masks stats::lag()\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "\n",
@@ -14,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,21 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "joined_df <- filtered_survival_df %>%\n",
-    "    inner_join(norm_survival_counts_t_df, by = \"sample_name\")\n",
-    "#     dplyr::mutate(figo_stage = case_when(\n",
-    "#         figo_stage %in% c(\"figo_stage_1\", \"figo_stage_2\") ~ \"early\",\n",
-    "#         figo_stage %in% c(\"figo_stage_3\", \"figo_stage_4\") ~ \"late\"\n",
-    "#     ))"
+    "    inner_join(norm_survival_counts_t_df, by = \"sample_name\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,36 +238,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_names <- colnames(joined_df[-c(1:2)])\n",
-    "waov_df <- tibble(geneID = c(), pval = c())"
+    "gene_names <- colnames(joined_df[-c(1:2)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for (g in gene_names) {\n",
-    "    formula_str <- paste0(g, \" ~ figo_stage\")\n",
-    "    waov_res <- oneway.test(as.formula(formula_str), data = joined_df)\n",
-    "    # Welch one-way ANOVA (doesn't assume equal variance for each group)\n",
-    "    waov_df <- waov_df %>%\n",
-    "        bind_rows(tibble(geneID = g, pval = waov_res$p.value))\n",
-    "}\n",
-    "waov_df <- waov_df %>%\n",
-    "    # restore original gene names (no longer care about formula)\n",
-    "    dplyr::mutate(geneID = gsub(\"_\", \"-\", geneID)) %>%\n",
-    "    dplyr::mutate(padj = p.adjust(pval, method = \"BH\"))"
+    "waov_df <- colwise_anova(joined_df, \"figo_stage\", gene_names, \"geneID\", adjust_method = \"BH\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -360,6 +360,48 @@
    "source": [
     "waov_df %>%\n",
     "    dplyr::filter(padj < 0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'INS_IGF2'"
+      ],
+      "text/latex": [
+       "'INS\\_IGF2'"
+      ],
+      "text/markdown": [
+       "'INS_IGF2'"
+      ],
+      "text/plain": [
+       "[1] \"INS_IGF2\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/latex": [],
+      "text/markdown": [],
+      "text/plain": [
+       "character(0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "waov_df$geneID[str_detect(waov_df$geneID, \"_\")]\n",
+    "waov_df$geneID <- gsub(\"_\", \"-\", waov_df$geneID)\n",
+    "waov_df$geneID[str_detect(waov_df$geneID, \"_\")]"
    ]
   },
   {
