--- a/network_analysis/network_construction.ipynb
+++ b/network_analysis/network_construction.ipynb
@@ -2,61 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
-      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
-      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
-      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
-      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "✖ dplyr::filter() masks stats::filter()\n",
-      "✖ dplyr::lag()    masks stats::lag()\n",
-      "Loading required package: dynamicTreeCut\n",
-      "Loading required package: fastcluster\n",
-      "\n",
-      "Attaching package: ‘fastcluster’\n",
-      "\n",
-      "The following object is masked from ‘package:stats’:\n",
-      "\n",
-      "    hclust\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘WGCNA’\n",
-      "\n",
-      "The following object is masked from ‘package:stats’:\n",
-      "\n",
-      "    cor\n",
-      "\n",
-      "\n",
-      "********************************************************\n",
-      "Note: As of version 1.0.0, cowplot does not change the\n",
-      "  default ggplot2 theme anymore. To recover the previous\n",
-      "  behavior, execute:\n",
-      "  theme_set(theme_cowplot())\n",
-      "********************************************************\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘matrixStats’\n",
-      "\n",
-      "The following object is masked from ‘package:dplyr’:\n",
-      "\n",
-      "    count\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(WGCNA)\n",
@@ -69,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,52 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parsed with column specification:\n",
-      "cols(\n",
-      "  sample_name = col_character(),\n",
-      "  vital_status = col_character(),\n",
-      "  survival_time = col_double(),\n",
-      "  figo_stage = col_character(),\n",
-      "  days_to_last_follow_up = col_double(),\n",
-      "  days_to_death = col_double(),\n",
-      "  age_at_diagnosis = col_double(),\n",
-      "  age_at_index = col_double(),\n",
-      "  height = col_double(),\n",
-      "  weight = col_double(),\n",
-      "  bmi = col_double(),\n",
-      "  race = col_character(),\n",
-      "  ethnicity = col_character()\n",
-      ")\n",
-      "Parsed with column specification:\n",
-      "cols(\n",
-      "  sample_name = col_character(),\n",
-      "  condition = col_character(),\n",
-      "  data_source = col_character()\n",
-      ")\n",
-      "Parsed with column specification:\n",
-      "cols(\n",
-      "  .default = col_double(),\n",
-      "  geneID = col_character()\n",
-      ")\n",
-      "See spec(...) for full column specifications.\n",
-      "Parsed with column specification:\n",
-      "cols(\n",
-      "  .default = col_double(),\n",
-      "  geneID = col_character()\n",
-      ")\n",
-      "See spec(...) for full column specifications.\n",
       "Parsed with column specification:\n",
       "cols(\n",
       "  Division = col_character(),\n",
@@ -181,58 +90,10 @@
     }
    ],
    "source": [
-    "matrisome_norm_counts_df <- load_matrisome_norm_counts(\n",
-    "    paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx]),\n",
-    "    event_code,\n",
-    "    keep_clinical = c(\"sample_name\", \"vital_status\", \"survival_time\", \"figo_stage\"),\n",
-    "    keep_conditions = c(\"tumor\"),\n",
-    "    drop_unexpressed = TRUE\n",
-    ")\n",
-    "\n",
+    "lnames <- load(file = paste0(dirs$data_dir, \"/saved_network_objects/\", unified_dsets[dset_idx], \"_tumor_data.RData\"))\n",
     "filtered_matrisome_df <- load_matrisome_df(matrisome_path) %>%\n",
     "    dplyr::select(gene_symbol, division, category, gene_name, synonyms) %>%\n",
-    "    dplyr::filter(gene_symbol %in% colnames(matrisome_norm_counts_df))    # Only include genes in dataset\n",
-    "\n",
-    "data_expr <- matrisome_norm_counts_df %>% column_to_rownames(\"sample_name\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>255</li><li>1004</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 255\n",
-       "\\item 1004\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 255\n",
-       "2. 1004\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1]  255 1004"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "dim(data_expr)"
+    "    dplyr::filter(gene_symbol %in% colnames(data_expr))    # Only include genes in dataset\n"
    ]
   },
   {
@@ -244,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -403,15 +264,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pick soft thresholding power"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,12 +276,12 @@
     "soft_power <- sft_df %>%\n",
     "    dplyr::filter(scale_free_topology > 0.9 | abs(scale_free_topology - thresh) < tol) %>%\n",
     "    top_n(n = 1, wt = desc(power)) %>%\n",
-    "    dplyr::pull(power)\n"
+    "    dplyr::pull(power)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -614,41 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`summarise()` regrouping output by 'cluster' (override with `.groups` argument)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Stacked bar chart?\n",
-    "module_counts <- dynamic_mods %>%\n",
-    "    as_tibble() %>%\n",
-    "    dplyr::rename(cluster = value) %>%\n",
-    "    dplyr::bind_cols(transpose_df(matrisome_norm_counts_df, future_colnames_col = \"sample_name\", previous_colnames_col = \"geneID\")) %>%\n",
-    "    dplyr::inner_join(filtered_matrisome_df, by = c(\"geneID\" = \"gene_symbol\")) %>%\n",
-    "    dplyr::select(cluster, geneID, category) %>%\n",
-    "    dplyr::group_by(cluster, category) %>%\n",
-    "    summarize(n = n())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# module_counts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -682,15 +502,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Merge similar modules"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,20 +602,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir.create(paste0(dirs$data_dir, \"/saved_network_objects/\"), showWarnings = FALSE)\n",
-    "save(mes, module_labels, data_expr, module_colors, gene_tree, file = paste0(dirs$data_dir, \"/saved_network_objects/\", unified_dsets[dset_idx], \"_cancer_network.RData\"))"
+    "save(\n",
+    "    mes,\n",
+    "    module_labels,\n",
+    "    module_colors,\n",
+    "    gene_tree,\n",
+    "    file = paste0(dirs$data_dir, \"/saved_network_objects/\", unified_dsets[dset_idx], \"_tumor_network.RData\")\n",
+    ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
