--- a/network_analysis/relate_modules_to_traits.ipynb
+++ b/network_analysis/relate_modules_to_traits.ipynb
@@ -94,7 +94,6 @@
     "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
     "projects <- c(\"TCGA-CESC\", \"TCGA-UCS\", \"TCGA-UCEC\", \"TCGA-OV\")\n",
     "unified_dsets <- c(\"unified_cervical_data\", \"unified_uterine_data\", \"unified_uterine_endometrial_data\")\n",
-    "matrisome_path <- paste0(dirs$data_dir, \"/matrisome/matrisome_hs_masterlist.tsv\")\n",
     "\n",
     "event_code <- list(\"Alive\" = 0, \"Dead\" = 1)"
    ]
@@ -117,57 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Parsed with column specification:\n",
-      "cols(\n",
-      "  sample_name = col_character(),\n",
-      "  vital_status = col_character(),\n",
-      "  survival_time = col_double(),\n",
-      "  figo_stage = col_character(),\n",
-      "  days_to_last_follow_up = col_double(),\n",
-      "  days_to_death = col_double(),\n",
-      "  age_at_diagnosis = col_double(),\n",
-      "  age_at_index = col_double(),\n",
-      "  height = col_double(),\n",
-      "  weight = col_double(),\n",
-      "  bmi = col_double(),\n",
-      "  race = col_character(),\n",
-      "  ethnicity = col_character()\n",
-      ")\n"
-     ]
-    }
-   ],
-   "source": [
-    "clinical_df <- load_survival_df(paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/survival_data.tsv\"), event_code) %>%\n",
-    "    dplyr::select(sample_name, vital_status, survival_time, figo_stage) %>%\n",
-    "    dplyr::filter(rowSums(is.na(.)) == 0)\n",
-    "\n",
-    "data_traits <- clinical_df %>%\n",
-    "    decode_figo_stage(to = \"n\") %>%\n",
-    "    dplyr::mutate(figo_stage = as.character(figo_stage)) %>%\n",
-    "    dplyr::bind_cols(to_one_hot(., col = \"figo_stage\")) %>%\n",
-    "    dplyr::select(-figo_stage) %>%\n",
-    "    column_to_rownames(\"sample_name\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lnames <- load(file = paste0(dirs$data_dir, \"/saved_network_objects/\", unified_dsets[dset_idx], \"_cancer_network.RData\"))"
+    "lnames <- load(file = paste0(dirs$data_dir, \"/saved_network_objects/\", unified_dsets[dset_idx], \"_tumor_data.RData\"))\n",
+    "lnames <- load(file = paste0(dirs$data_dir, \"/saved_network_objects/\", unified_dsets[dset_idx], \"_tumor_network.RData\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -323,13 +282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -356,13 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -471,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -735,6 +684,13 @@
     "module_figo_padjs <- apply(module_figo_pvals, MARGIN = 2, function(x) { p.adjust(x, method = \"BH\") })\n",
     "module_figo_padjs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
