--- a/network_analysis/network_construction.ipynb
+++ b/network_analysis/network_construction.ipynb
@@ -2,9 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
+      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
+      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
+      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
+      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "✖ dplyr::filter() masks stats::filter()\n",
+      "✖ dplyr::lag()    masks stats::lag()\n",
+      "Loading required package: dynamicTreeCut\n",
+      "Loading required package: fastcluster\n",
+      "\n",
+      "Attaching package: ‘fastcluster’\n",
+      "\n",
+      "The following object is masked from ‘package:stats’:\n",
+      "\n",
+      "    hclust\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘WGCNA’\n",
+      "\n",
+      "The following object is masked from ‘package:stats’:\n",
+      "\n",
+      "    cor\n",
+      "\n",
+      "\n",
+      "********************************************************\n",
+      "Note: As of version 1.0.0, cowplot does not change the\n",
+      "  default ggplot2 theme anymore. To recover the previous\n",
+      "  behavior, execute:\n",
+      "  theme_set(theme_cowplot())\n",
+      "********************************************************\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘matrixStats’\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    count\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(WGCNA)\n",
@@ -17,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
