Prototyped geneset enrichment analysis.

--- a/network_analysis/relate_modules_to_traits.ipynb
+++ b/network_analysis/relate_modules_to_traits.ipynb
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
     "trait_strs <- c(\"vital_dev\", \"figo_stage_1\", \"figo_stage_2\", \"figo_stage_3\", \"figo_stage_4\")\n",
     "for (ts in trait_strs) {\n",
     "    facet_plot(pivot_mm_gs_df, ts)\n",
-    "    ggsave(filename = paste0(dirs$figures_dir, \"/\", unified_dsets[dset_idx], \"_module_\", ts, \"_facet.png\"), height = 10, width = 10)\n",
+    "    ggsave(filename = paste0(dirs$figures_dir, \"/network/\", unified_dsets[dset_idx], \"_module_\", ts, \"_facet.png\"), height = 10, width = 10)\n",
     "}\n"
    ]
   },
