--- a/network_analysis/relate_modules_to_traits.ipynb
+++ b/network_analysis/relate_modules_to_traits.ipynb
@@ -2,56 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
-      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
-      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
-      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
-      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "✖ dplyr::filter() masks stats::filter()\n",
-      "✖ dplyr::lag()    masks stats::lag()\n",
-      "Loading required package: dynamicTreeCut\n",
-      "Loading required package: fastcluster\n",
-      "\n",
-      "Attaching package: ‘fastcluster’\n",
-      "\n",
-      "The following object is masked from ‘package:stats’:\n",
-      "\n",
-      "    hclust\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘WGCNA’\n",
-      "\n",
-      "The following object is masked from ‘package:stats’:\n",
-      "\n",
-      "    cor\n",
-      "\n",
-      "\n",
-      "********************************************************\n",
-      "Note: As of version 1.0.0, cowplot does not change the\n",
-      "  default ggplot2 theme anymore. To recover the previous\n",
-      "  behavior, execute:\n",
-      "  theme_set(theme_cowplot())\n",
-      "********************************************************\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘matrixStats’\n",
-      "\n",
-      "The following object is masked from ‘package:dplyr’:\n",
-      "\n",
-      "    count\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(WGCNA)\n",
@@ -64,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,6 +320,11 @@
     "    inner_join(gene_mm_df, by = \"geneID\") %>%\n",
     "    inner_join(gene_mm_pval_df, by = \"geneID\") %>%\n",
     "    inner_join(gene_mm_qval_df, by = \"geneID\") %>%\n",
+    "    # Specify cor, pval, and qval for module to which this gene is asigned\n",
+    "    dplyr::mutate(mm_cor = !!as.name(paste0(.$module, \"_cor\"))) %>%\n",
+    "    dplyr::mutate(mm_pval = !!as.name(paste0(.$module, \"_pval\"))) %>%\n",
+    "    dplyr::mutate(mm_qval = !!as.name(paste0(.$module, \"_qval\"))) %>%\n",
+    "    dplyr::select(geneID, module, mm_cor, mm_pval, mm_qval, everything()) %>%\n",
     "    inner_join(gene_figo_df, by = \"geneID\") %>%\n",
     "    inner_join(gene_figo_pval_df, by = \"geneID\") %>%\n",
     "    inner_join(gene_figo_qval_df, by = \"geneID\") %>%\n",
@@ -375,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
