Added adjusted p values and q values to statistical analyses

--- a/feature_selection_analysis/anova.ipynb
+++ b/feature_selection_analysis/anova.ipynb
@@ -2,26 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
-      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
-      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
-      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
-      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "✖ dplyr::filter() masks stats::filter()\n",
-      "✖ dplyr::lag()    masks stats::lag()\n"
+      "Loading required package: dynamicTreeCut\n",
+      "Loading required package: fastcluster\n",
+      "\n",
+      "Attaching package: ‘fastcluster’\n",
+      "\n",
+      "The following object is masked from ‘package:stats’:\n",
+      "\n",
+      "    hclust\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘WGCNA’\n",
+      "\n",
+      "The following object is masked from ‘package:stats’:\n",
+      "\n",
+      "    cor\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "library(tidyverse)\n",
+    "library(WGCNA)\n",
     "\n",
     "# Custom package\n",
     "library(rutils)"
@@ -247,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,92 +279,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table>\n",
-       "<caption>A tibble: 13 × 3</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>geneID</th><th scope=col>pval</th><th scope=col>padj</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>MUC3A    </td><td>5.083115e-04</td><td>4.498752e-02</td></tr>\n",
-       "\t<tr><td>IL7      </td><td>2.304654e-05</td><td>1.106965e-02</td></tr>\n",
-       "\t<tr><td>SERPINA3 </td><td>5.864586e-04</td><td>4.498752e-02</td></tr>\n",
-       "\t<tr><td>TGM3     </td><td>6.041712e-04</td><td>4.498752e-02</td></tr>\n",
-       "\t<tr><td>FGF14    </td><td>5.232242e-04</td><td>4.498752e-02</td></tr>\n",
-       "\t<tr><td>LGI2     </td><td>3.430677e-05</td><td>1.106965e-02</td></tr>\n",
-       "\t<tr><td>GDF7     </td><td>1.368575e-04</td><td>2.650798e-02</td></tr>\n",
-       "\t<tr><td>IHH      </td><td>1.516764e-08</td><td>1.468228e-05</td></tr>\n",
-       "\t<tr><td>MEGF9    </td><td>4.229478e-04</td><td>4.498752e-02</td></tr>\n",
-       "\t<tr><td>PCOLCE2  </td><td>2.976123e-04</td><td>3.807040e-02</td></tr>\n",
-       "\t<tr><td>HHIP     </td><td>3.146314e-04</td><td>3.807040e-02</td></tr>\n",
-       "\t<tr><td>SERPINA11</td><td>2.430913e-04</td><td>3.807040e-02</td></tr>\n",
-       "\t<tr><td>PLG      </td><td>1.369214e-04</td><td>2.650798e-02</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
+       "968"
       ],
       "text/latex": [
-       "A tibble: 13 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " geneID & pval & padj\\\\\n",
-       " <chr> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t MUC3A     & 5.083115e-04 & 4.498752e-02\\\\\n",
-       "\t IL7       & 2.304654e-05 & 1.106965e-02\\\\\n",
-       "\t SERPINA3  & 5.864586e-04 & 4.498752e-02\\\\\n",
-       "\t TGM3      & 6.041712e-04 & 4.498752e-02\\\\\n",
-       "\t FGF14     & 5.232242e-04 & 4.498752e-02\\\\\n",
-       "\t LGI2      & 3.430677e-05 & 1.106965e-02\\\\\n",
-       "\t GDF7      & 1.368575e-04 & 2.650798e-02\\\\\n",
-       "\t IHH       & 1.516764e-08 & 1.468228e-05\\\\\n",
-       "\t MEGF9     & 4.229478e-04 & 4.498752e-02\\\\\n",
-       "\t PCOLCE2   & 2.976123e-04 & 3.807040e-02\\\\\n",
-       "\t HHIP      & 3.146314e-04 & 3.807040e-02\\\\\n",
-       "\t SERPINA11 & 2.430913e-04 & 3.807040e-02\\\\\n",
-       "\t PLG       & 1.369214e-04 & 2.650798e-02\\\\\n",
-       "\\end{tabular}\n"
+       "968"
       ],
       "text/markdown": [
-       "\n",
-       "A tibble: 13 × 3\n",
-       "\n",
-       "| geneID &lt;chr&gt; | pval &lt;dbl&gt; | padj &lt;dbl&gt; |\n",
-       "|---|---|---|\n",
-       "| MUC3A     | 5.083115e-04 | 4.498752e-02 |\n",
-       "| IL7       | 2.304654e-05 | 1.106965e-02 |\n",
-       "| SERPINA3  | 5.864586e-04 | 4.498752e-02 |\n",
-       "| TGM3      | 6.041712e-04 | 4.498752e-02 |\n",
-       "| FGF14     | 5.232242e-04 | 4.498752e-02 |\n",
-       "| LGI2      | 3.430677e-05 | 1.106965e-02 |\n",
-       "| GDF7      | 1.368575e-04 | 2.650798e-02 |\n",
-       "| IHH       | 1.516764e-08 | 1.468228e-05 |\n",
-       "| MEGF9     | 4.229478e-04 | 4.498752e-02 |\n",
-       "| PCOLCE2   | 2.976123e-04 | 3.807040e-02 |\n",
-       "| HHIP      | 3.146314e-04 | 3.807040e-02 |\n",
-       "| SERPINA11 | 2.430913e-04 | 3.807040e-02 |\n",
-       "| PLG       | 1.369214e-04 | 2.650798e-02 |\n",
-       "\n"
+       "968"
       ],
       "text/plain": [
-       "   geneID    pval         padj        \n",
-       "1  MUC3A     5.083115e-04 4.498752e-02\n",
-       "2  IL7       2.304654e-05 1.106965e-02\n",
-       "3  SERPINA3  5.864586e-04 4.498752e-02\n",
-       "4  TGM3      6.041712e-04 4.498752e-02\n",
-       "5  FGF14     5.232242e-04 4.498752e-02\n",
-       "6  LGI2      3.430677e-05 1.106965e-02\n",
-       "7  GDF7      1.368575e-04 2.650798e-02\n",
-       "8  IHH       1.516764e-08 1.468228e-05\n",
-       "9  MEGF9     4.229478e-04 4.498752e-02\n",
-       "10 PCOLCE2   2.976123e-04 3.807040e-02\n",
-       "11 HHIP      3.146314e-04 3.807040e-02\n",
-       "12 SERPINA11 2.430913e-04 3.807040e-02\n",
-       "13 PLG       1.369214e-04 2.650798e-02"
+       "[1] 968"
       ]
      },
      "metadata": {},
@@ -358,13 +302,12 @@
     }
    ],
    "source": [
-    "waov_df %>%\n",
-    "    dplyr::filter(padj < 0.05)"
+    "length(WGCNA::qvalue(na.omit(waov_df$pval))$qvalues)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
