--- a/network_analysis/relate_modules_to_traits.ipynb
+++ b/network_analysis/relate_modules_to_traits.ipynb
@@ -2,9 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
+      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
+      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
+      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
+      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "✖ dplyr::filter() masks stats::filter()\n",
+      "✖ dplyr::lag()    masks stats::lag()\n",
+      "Loading required package: dynamicTreeCut\n",
+      "Loading required package: fastcluster\n",
+      "\n",
+      "Attaching package: ‘fastcluster’\n",
+      "\n",
+      "The following object is masked from ‘package:stats’:\n",
+      "\n",
+      "    hclust\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘WGCNA’\n",
+      "\n",
+      "The following object is masked from ‘package:stats’:\n",
+      "\n",
+      "    cor\n",
+      "\n",
+      "\n",
+      "********************************************************\n",
+      "Note: As of version 1.0.0, cowplot does not change the\n",
+      "  default ggplot2 theme anymore. To recover the previous\n",
+      "  behavior, execute:\n",
+      "  theme_set(theme_cowplot())\n",
+      "********************************************************\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘matrixStats’\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    count\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(WGCNA)\n",
@@ -17,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +450,7 @@
     "    sprintf(paste0(\"%.\", d, \"f\"), x)\n",
     "}\n",
     "\n",
-    "facet_plot <- function(pivot_df, trait_str, module_pval_thresh = 0.05, module_cor_pval_thresh = 0.5) {\n",
+    "facet_plot <- function(pivot_df, trait_str, module_pval_thresh = 0.05, module_cor_pval_thresh = 0.0000) {\n",
     "    plt <- ggplot(pivot_df %>% dplyr::filter(trait_cor == paste0(trait_str, \"_cor\"))) +\n",
     "        geom_point(aes(x = abs(module_cor_val), y = abs(trait_cor_val), color = (module_pval_val < module_pval_thresh) & (abs(module_cor_val) > module_cor_pval_thresh))) +\n",
     "        geom_smooth(aes(x = abs(module_cor_val), y = abs(trait_cor_val)), method = \"lm\", color = \"black\") +\n",
@@ -413,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
